--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
+                        'logo-color': '#030712',
+                        'nav-color': '#030712b3',
+                        'secondary-color': '#1DD100',
                     }
                 }
             }
@@ -29,13 +32,74 @@
     <!-- Roboto, Inter, Raleway Font Family Linked Here From Google Font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 
 </head>
 
 <body>
 
-    <header>
+    <header class="container mx-auto mt-12 mb-8 font-raleway">
+
+        <div class="navbar">
+
+            <div class="navbar-start">
+
+                <div class="dropdown">
+
+                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4 6h16M4 12h8m-8 6h16" />
+                        </svg>
+
+                    </div>
+
+                    <ul tabindex="0"
+                        class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 text-lg font-medium text-nav-color">
+
+                        <li><a>Home</a></li>
+
+                        <li><a>About</a></li>
+
+                        <li><a>Destination</a></li>
+
+                        <li><a>Search</a></li>
+
+                    </ul>
+
+                </div>
+
+                <a class="btn btn-ghost text-4xl font-extrabold text-logo-color">P-Ticket</a>
+
+            </div>
+
+            <div class="navbar-center hidden lg:flex">
+
+                <ul class="menu menu-horizontal px-1 text-lg font-medium text-nav-color">
+
+                    <li><a>Home</a></li>
+
+                    <li><a>About</a></li>
+
+                    <li><a>Destination</a></li>
+
+                    <li><a>Search</a></li>
+
+                </ul>
+
+            </div>
+
+            <div class="navbar-end">
+
+                <a class="btn bg-[#1dd10066] text-xl text-secondary-color border border-[#1dd10066] rounded-xl">Bus<div><img src="images/bus-icon.png" alt="...Loading"></div></a>
+
+            </div>
+
+        </div>
 
     </header>
 
