ticket section uploaded for desktop view

--- a/index.html
+++ b/index.html
@@ -253,8 +253,117 @@
 
             <div class="mt-16 text-center">
 
-                <a class="btn text-xl text-secondary-color border border-[#1dd10066] rounded-xl" href="#">See All Offers</a>
+                <a class="btn text-xl text-secondary-color border border-[#1dd10066] rounded-xl" href="#">See All
+                    Offers</a>
 
+            </div>
+
+        </section>
+
+        <section id="ticket-section" class="py-32 bg-neutral-200 rounded-t-[88px] border-t-2 border-[#1dd10066]">
+
+            <h2 class="text-slate-950 font-raleway font-bold text-4xl text-center mb-6">P.H Paribahan</h2>
+
+            <p class="w-[736px] mx-auto font-inter text-lg font-normal leading-8 text-neutral-500 mb-8 text-center">Yes,
+                you can run unit tests and view the results directly within the app. The integrated testing features
+                allow for a streamlined .</p>
+
+            <div class="mx-auto container">
+
+                <div class="mt-12 bg-white rounded-3xl flex items-center">
+
+                    <!-- left element  -->
+                    <div class="p-8 flex-1">
+
+                        <!-- row - 01 -->
+                        <div class="flex items-center justify-between">
+
+                            <!-- row 01 left div  -->
+                            <div class="flex gap-x-4 items-center">
+
+                                <div class="w-16 h-12">
+
+                                    <img src="images/bus-logo.png" alt="...Loading">
+
+                                </div>
+
+                                <div>
+
+                                    <h4 class="font-raleway text-3xl font-bold text-slate-950">Greenline Paribahan</h4>
+
+                                    <h6 class="font-inter text-lg font-normal text-neutral-400">Coach-009-WEB !
+                                        AC_Business</h6>
+
+                                </div>
+
+                            </div>
+
+                            <div class="flex items-center gap-x-2 bg-green-100 rounded-xl p-4">
+
+                                <div class="w-7 h-7">
+                                    <img src="images/seat-green.png" alt="...Loading">
+                                </div>
+
+                                <h6 class="font-inter text-lg font-normal text-green-400">40 Seats left</h6>
+
+                            </div>
+
+                        </div>
+
+                        <div class="mt-6 bg-neutral-200 p-8 rounded-3xl">
+
+                            <div
+                                class="py-8 border-b-2 border-neutral-300 border-dashed flex justify-between items-center">
+
+                                <h6 class="font-raleway text-lg font-semibold text-neutral-400">Route</h6>
+                                <h6 class="font-raleway text-lg font-semibold text-slate-950">Dhaka - Sylhet</h6>
+
+                            </div>
+
+                            <div
+                                class="py-8 border-b-2 border-neutral-300 border-dashed flex justify-between items-center">
+
+                                <h6 class="font-raleway text-lg font-semibold text-neutral-400">Departure Time</h6>
+                                <h6 class="font-raleway text-lg font-semibold text-slate-950">9.00 PM</h6>
+
+                            </div>
+
+                            <div class="my-6 flex justify-center items-center gap-x-6">
+                                <button class="btn bg-neutral-300 border-none">Boarding Point - Laxmipur</button>
+                                <button class="btn bg-neutral-300 border-none">Dropping Point - Bogura</button>
+                                <button class="btn bg-neutral-300 border-none">Est. Time - 11 Hour</button>
+                            </div>
+
+
+                        </div>
+
+                    </div>
+
+                    <!-- center element  -->
+                    <div>
+
+                        <img src="images/info-devider.png" alt="...Loading">
+
+                    </div>
+
+                    <!-- right element  -->
+
+                    <div class="font-raleway flex justify-center flex-col items-center gap-4 w-1/5">
+
+                        <div class="w-10 h-10"><img src="images/fare.png" alt="...Loading"></div>
+
+                        <div class="text-center">
+
+                            <h2 class="font-bold text-3xl text-slate-950">550 Taka</h2>
+
+                            <p class="font-semibold text-2xl text-neutral-400 mt-2">Per Seat</p>
+
+                        </div>
+
+                    </div>
+
+                </div>
+                
             </div>
 
         </section>
