--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                                         <img src="images/seat-green.png" alt="...Loading">
                                     </div>
 
-                                    <h6 class="font-inter text-lg font-normal text-green-400">40 Seats left</h6>
+                                    <h6 class="font-inter text-lg font-normal text-green-400"><span id="seat-left">40</span> Seats left</h6>
 
                                 </div>
 
@@ -414,92 +414,92 @@
                                 class="font-inter text-center font-medium text-lg text-neutral-500 grid grid-cols-3 gap-4 items-center">
 
                                 <span>A</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">A1</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">A2</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="A1">A1</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="A2">A2</span>
 
                                 <span>B</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">B1</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">B2</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="B1">B1</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="B2">B2</span>
 
                                 <span>C</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">C1</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">C2</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="C1">C1</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="C2">C2</span>
 
                                 <span>D</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">D1</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">D2</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="D1">D1</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="D2">D2</span>
 
                                 <span>E</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">E1</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">E2</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="E1">E1</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="E2">E2</span>
 
                                 <span>F</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">F1</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">F2</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="F1">F1</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="F2">F2</span>
 
                                 <span>G</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">G1</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">G2</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="G1">G1</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="G2">G2</span>
 
                                 <span>H</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">H1</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">H2</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="H1">H1</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="H2">H2</span>
 
                                 <span>I</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">I1</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">I2</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="I1">I1</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="I2">I2</span>
 
                                 <span>J</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">J1</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">J2</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="J1">J1</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="J2">J2</span>
 
                             </div>
 
                             <div
                                 class="font-inter text-center font-medium text-lg text-neutral-500 grid grid-cols-2 gap-4 items-center">
 
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">A3</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">A4</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="A3">A3</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="A4">A4</span>
 
 
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">B3</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">B4</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="B3">B3</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="B4">B4</span>
 
 
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">C3</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">C4</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="C3">C3</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="C4">C4</span>
 
 
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">D3</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">D4</span>
-
-
-
-
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">E3</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">E4</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="D3">D3</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="D4">D4</span>
 
 
 
 
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">F3</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">F4</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="E3">E3</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="E4">E4</span>
 
 
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">G3</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">G4</span>
 
 
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">H3</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">H4</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="F3">F3</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="F4">F4</span>
 
 
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">I3</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">I4</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="G3">G3</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="G4">G4</span>
 
 
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">J3</span>
-                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer">J4</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="H3">H3</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="H4">H4</span>
+
+
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="I3">I3</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="I4">I4</span>
+
+
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="J3">J3</span>
+                                <span class="bg-neutral-300 px-8 py-3 rounded-xl cursor-pointer commonClassName" id="J4">J4</span>
 
 
                             </div>
@@ -524,7 +524,7 @@
                                     <thead
                                         class="font-inter font-medium text-base text-slate-950 border-b-2 border-neutral-300 border-dashed ">
                                         <tr class="flex justify-between mb-4">
-                                            <th>Seat</th>
+                                            <th>Seat<span class="bg-lime-500 text-white text-xs font-semibold rounded py-1 px-2 -translate-y-11 text-center justify-center items-center translate-x-8 flex" id="select-seat">0</span></th>
                                             <th>Class</th>
                                             <th>Price</th>
                                         </tr>
@@ -532,6 +532,10 @@
 
                                     <tbody>
 
+                                        <tr id="resultPrint" class="flex justify-between my-4">
+
+                                        </tr>
+                                                                            
                                     </tbody>
 
                                 </table>
@@ -540,7 +544,7 @@
                                     class="mt-4 py-4 border-t-2 border-neutral-300 border-dashed font-inter font-medium text-base text-slate-950 flex justify-between">
 
                                     <h4>Total Price</h4>
-                                    <h4>BDT <span>0</span></h4>
+                                    <h4>BDT <span id="total-price">0</span></h4>
 
                                 </div>
 
@@ -734,6 +738,8 @@
 
     <!-- External Javascript File Linked Here  -->
     <script src="javascript/script.js"></script>
+
+    <script src="javascript/commonfunction.js"></script>
 
 </body>
 
