apply button function created

--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                                         placeholder="Have any copupon?">
 
                                     <a href="#"
-                                        class="btn bg-secondary-color text-xl text-white rounded-xl border-0">Apply</a>
+                                        id="apply-button" class="btn bg-secondary-color text-xl text-white rounded-xl border-0" disabled>Apply</a>
 
                                 </div>
 
@@ -680,7 +680,7 @@
     </main>
 
     <!-- footer section  -->
-    <footer class="bg-slate-950 mt-32">
+    <footer class="bg-slate-950">
 
         <div class="container mx-auto py-32">
 
