scroll behavior added

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         run unit tests and view the results directly within the app. The integrated testing features
                         allow for a streamlined .</p>
 
-                    <a href="#" class="btn bg-secondary-color text-xl text-logo-color rounded-xl border-0">Buy
+                    <a href="#seat-select-section" class="btn bg-secondary-color text-xl text-logo-color rounded-xl border-0">Buy
                         Tickets</a>
 
                 </div>
