--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                             </div>
 
 
-                            <a href="#" id="next-button"
+                            <a id="next-button"
                                 class="btn bg-secondary-color text-xl text-white rounded-xl border-0 flex my-6"
                                 >Next</a>
 
