hide coupon section

--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
 
                                 </div>
 
-                                <div class="bg-white rounded-xl py-3 px-6 flex justify-between items-center my-6">
+                                <div id="coupon" class="bg-white rounded-xl py-3 px-6 flex justify-between items-center my-6">
 
                                     <input id="couponField" type="text" class="font-inter text-sm text-neutral-400 flex-1 outline-none"
                                         placeholder="Have any copupon?">
@@ -594,7 +594,7 @@
                                             Number*</span>
                                     </div>
 
-                                    <input type="number" placeholder="Enter your phonenumber"
+                                    <input id="phone-numberInput" type="number" placeholder="Enter your phonenumber"
                                         class="input input-bordered w-full font-normal text-base text-neutral-400" />
 
                                 </label>
@@ -617,9 +617,7 @@
                             </div>
 
 
-                            <a id="next-button"
-                                class="btn bg-secondary-color text-xl text-white rounded-xl border-0 flex my-6"
-                                >Next</a>
+                            <a id="next-button" class="btn bg-secondary-color text-xl text-white rounded-xl border-0 flex my-6">Next</a>
 
                             <div class="flex justify-center ">
 
